[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Font96.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font48.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/img/menu/zombie.png" type="Texture" id=4]

[node name="MainMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
custom_constants/margin_right = 120
custom_constants/margin_top = 10
custom_constants/margin_left = 120
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 10.0
margin_right = 920.0
margin_bottom = 550.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 501.0
margin_bottom = 540.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 501.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "zombie time"

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 501.0
margin_bottom = 540.0
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="continue" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 82.0
margin_right = 501.0
margin_bottom = 139.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = " continue"
flat = true
align = 0

[node name="new_game" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 189.0
margin_right = 501.0
margin_bottom = 246.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = " new game"
flat = true
align = 0

[node name="options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 296.0
margin_right = 501.0
margin_bottom = 353.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = " options"
flat = true
align = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 505.0
margin_right = 800.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="zombie" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
margin_left = 19.0
margin_top = 142.0
margin_right = 275.0
margin_bottom = 398.0
texture = ExtResource( 4 )

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/options" to="." method="_on_options_pressed"]
[connection signal="gui_input" from="MarginContainer/HBoxContainer/CenterContainer/zombie" to="." method="_on_zombie_gui_input"]
